# Backtester_25eb

./: LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
src/backtester/: cli.py  config.py  engine.py  execution.py  metrics.py  models.py  order_manager.py  portfolio.py  reports.py  risk_manager.py  signal_manager.py  strategy.py  utils.py
src/backtester/data/: loader.py  resampler.py
